# Cheatron

./: .gitignore  .gitmodules  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app-update.yml  electron-builder.json5  eslint.config.js  index.dev.html  index.html  package.json  prettier.config.mjs  tailwind.config.js  tsconfig.base.json  tsconfig.cli.json  tsconfig.electron.json  tsconfig.json  tsconfig.web.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  release.yml  test-linux.yml
cli/: index.tsx  package.json  startup.ts
core/: capstone.ts  core.ts  global-pre.d.ts  global.d.ts  logger.ts  memory-utils.ts  native.ts  process.ts  reference.ts
core/dev/: global-pre.ts
core/dev/native/: index.ts
core/dev/native/mock/: constants.ts  index.ts
core/globals/: global-logger.ts  global-native-binding.ts  global-native.ts  global-pre.ts  global.ts  init.ts  preinit.ts
core/memory/: reactive-grid.ts  viewer-grid.ts  viewer.ts
core/network/: memory-protocol.ts
core/prod/: core.ts  global-pre.ts
core/prod/native/: index.ts
electron/: icon.ts  main.ts  preload.ts  startup.ts
electron/dev/: icon.ts  load-window.ts
electron/dev/ipc/: update.ts
electron/ipc/: accent-color.ts  app-version.ts  capstone.ts  ipc-server.ts  logger.ts  memory.ts  native.ts  process-env.ts  store.ts  update.ts
electron/prod/: icon.ts  load-window.ts
electron/prod/ipc/: update.ts
native/: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  index.cjs  index.d.ts  package.json
native/cmake/: llvm-toolchain.cmake
native/include/: capstone.hpp  constants.hpp  process.hpp  reference.hpp
native/modulerules/: cheatron_rules.h
native/src/: capstone.cpp  cheatron-native.cpp  constants.cpp  log.cpp  log.hpp  process.cpp  reference.cpp  version.rc
scripts/: sign.ts
src/: App.tsx  globals.ts  index.css  main.tsx  vite-env.d.ts
src/components/: Layout.tsx  MemoryControlPanel.tsx  ThemeProvider.tsx  ThemeToggle.tsx  VirtualHexGrid.tsx  theme-context.ts
src/components/ui/: slider.tsx  virtual-scroller.tsx
src/hooks/: use-theme.ts  useMemoryGrid.ts
src/lib/: memory.ts  system-accent.ts
src/pages/: Debug.tsx  MemoryViewer.tsx  Settings.tsx  Versions.tsx
src/styles/: globals.css
tests/: App.test.tsx
types/: capstone.d.ts  handles.d.ts  memory-view.ts  memory.d.ts  process.d.ts  reference.d.ts  updater.d.ts
types/native/: constants.d.ts  index.d.ts  reference.d.ts
